--- a/index.html
+++ b/index.html
@@ -20,13 +20,17 @@
             <img class="img-busca" src="https://www.svgrepo.com/show/488200/find.svg" alt="busca">
         </button>
 
+        <div class="mensagem-erro" style="display: none;">
+            Não foi possível encontrar a cidade. Certifique-se de que o nome está correto e tente novamente.
+        </div>
+
         <div class="caixa-media">
             <h2 class="cidade">Tempo em Passo Fundo</h2>
 
             <p class="temp">18°C</p>
 
             <div class="caixa-menor">
-                <img class="img-previsao" alt="icone-info-tempo" src="https://openweathermap.org/img/wn/04n.png">
+                <img class="img-previsao" src="https://openweathermap.org/img/wn/04n.png">
                 <p class="texto-previsao">Nublado</p>
             </div>
 
